# swo-marketplace-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PRC-5516-5707-0003.xlsx  PRD-0840-5590.xlsx  PRD-2069-4721.xlsx  PRD-2873-8874.xlsx  PRD-3427-4385.xlsx  PRD-7512-9302-v2025.08.06.xlsx  README.md  compose.yaml  dev.Dockerfile  docker-compose.yml  makefile  prod.Dockerfile  pyproject.toml  setup.cfg  sonar-project.properties  wps-baseline-raw.txt  wps-error-codes-count.txt  wps-error-codes.txt
.github/: CODEOWNERS
.github/workflows/: pr-build-merge.yml  release.yml
cli/: swocli.py
cli/core/: alias_group.py  console.py  error_wrappers.py  errors.py  file_discovery.py  nested_dicts.py  plugins.py  state.py  stats.py  stats_mixins.py  utils.py
cli/core/accounts/: __init__.py  app.py  constants.py  containers.py  flows.py  models.py  table_formatters.py  url_parser.py
cli/core/accounts/api/: account_api_service.py
cli/core/accounts/handlers/: __init__.py  json_file_handler.py
cli/core/console/: __init__.py
cli/core/console/renderers/: accounts.py  audit.py  banner.py  products.py  stats.py
cli/core/handlers/: __init__.py  constants.py  errors.py  excel_file_handler.py  excel_file_handler_mixins.py  excel_styles.py  file_handler.py  file_manager.py  horizontal_tab_file_manager.py  vertical_tab_file_manager.py
cli/core/handlers/excel_mixins/: __init__.py  composites.py  read.py  types.py  validation.py  workbook.py  worksheet.py  write.py
cli/core/models/: __init__.py  data_model.py
cli/core/mpt/: api.py  client.py  flows.py  models.py  mpt_client.py
cli/core/mpt/models/: __init__.py  accounts.py  common.py  price_lists.py  products.py
cli/core/price_lists/: __init__.py  app.py  constants.py
cli/core/price_lists/api/: __init__.py  price_list_api_service.py  price_list_item_api_service.py
cli/core/price_lists/app/: app.py  export.py  sync.py
cli/core/price_lists/handlers/: __init__.py  price_list_excel_file_manager.py  price_list_item_excel_file_manager.py
cli/core/price_lists/models/: __init__.py  item.py  price_list.py
cli/core/price_lists/services/: __init__.py  item_service.py  price_list_service.py
cli/core/products/: __init__.py  app.py  constants.py  containers.py  table_formatters.py
cli/core/products/api/: __init__.py  item_api_service.py  item_group_api_service.py  parameter_group_api_service.py  parameters_api_service.py  product_api_service.py  template_api_service.py
cli/core/products/app/: app.py  export.py  list_products.py  sync.py
cli/core/products/handlers/: __init__.py  data_validation.py  item_excel_file_manager.py  item_group_excel_file_manager.py  parameter_group_excel_file_manager.py  parameters_excel_file_manager.py  product_excel_file_manager.py  settings_excel_file_manager.py  template_excel_file_manager.py
cli/core/products/models/: __init__.py  data_actions.py  enums.py  item_group.py  items.py  mixins.py  parameter_group.py  parameters.py  product.py  template.py
cli/core/products/services/: __init__.py  item_group_service.py  item_service.py  parameter_group_service.py  parameters_service.py  product_service.py  related_components_base_service.py  template_service.py
cli/core/services/: __init__.py  base_service.py  service_context.py  service_result.py
cli/plugins/audit_plugin/: api.py  app.py  audit_paths.py  audit_records.py  utils.py
docs/: PROJECT_DESCRIPTION.md  architecture.md  contributing.md  documentation.md  local-development.md  plugin-development.md  testing.md  usage.md  wps-adoption-session.md
make/: common.mk
swo/mpt/cli/: swocli.py
swo/mpt/cli/core/: alias_group.py  console.py  errors.py  plugins.py  state.py  stats.py  utils.py
swo/mpt/cli/core/accounts/: app.py  constants.py  containers.py  flows.py  models.py
swo/mpt/cli/core/handlers/: errors.py  excel_file_handler.py  excel_styles.py  file_handler.py  file_manager.py  horizontal_tab_file_manager.py  vertical_tab_file_manager.py
swo/mpt/cli/core/models/: __init__.py  data_model.py
swo/mpt/cli/core/mpt/: api.py  client.py  flows.py  models.py
swo/mpt/cli/core/price_lists/: app.py  constants.py
tests/: conftest.py  test_debug_logging.py
tests/accounts_config/home/.swocli/: accounts.json
tests/audit_plugin/: test_api.py  test_app.py  test_audit_utils.py
tests/cli/: test_cli.py
tests/cli/core/: conftest.py  test_debug_logging.py  test_error_wrappers.py  test_errors.py  test_file_discovery.py  test_nested_dicts.py  test_stats.py  test_utils.py
tests/cli/core/accounts/: conftest.py  test_app.py  test_flows.py  test_table_formatters.py
tests/cli/core/handlers/: test_errors.py  test_excel_file_handler.py  test_excel_file_manager.py  test_file_handler.py  test_horizontal_tab_file_manager.py  test_vertical_tab_file_manager.py
tests/cli/core/mpt/: conftest.py  test_api.py  test_client.py  test_flows.py
tests/cli/core/price_lists/: conftest.py  test_app.py
tests/cli/core/products/: conftest.py  test_app.py  test_table_formatters.py
tests/cli/plugins/: __init__.py
tests/cli/plugins/audit_plugin/: app.py  test_api.py  test_app.py  test_audit_paths.py  test_audit_records.py  test_audit_utils.py  test_load_plugins.py
tests/pricelist_files/: PRC-1234-1234-1234.xlsx
tests/product_files/: PRD-0000-0000-empty.xlsx  PRD-1234-1234-1234-agreements-parameters-not-all-columns.xlsx  PRD-1234-1234-1234-file-extra-column.xlsx  PRD-1234-1234-1234-file-new.xlsx  PRD-1234-1234-1234-file-update.xlsx  PRD-1234-1234-1234-file.xlsx  PRD-1234-1234-1234-general-not-all.xlsx  PRD-1234-1234-1234-item-parameters-not-all-columns.xlsx  PRD-1234-1234-1234-items-groups-not-all-columns.xlsx  PRD-1234-1234-1234-items-not-all-columns.xlsx  PRD-1234-1234-1234-parameter-groups-not-all-columns.xlsx  PRD-1234-1234-1234-request-parameters-not-all-columns.xlsx  PRD-1234-1234-1234-settings-not-all-columns.xlsx  PRD-1234-1234-1234-subscription-parameters-not-all-columns.xlsx  PRD-1234-1234-1234-templates-not-all-columns.xlsx  PRD-5555-4202 (Commercial) v3.xlsx
tests/test_swo/test_mpt/test_cli/: test_cli.py
(+179 files in other folders)
